--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,10 @@
-<h1>Lists Index</h1>
+<h2>Lists Index</h2>
 
-<ol>
-  <% @lists.each do |list| %>
-    <li><%= link_to list.name, list %></li>
-  <% end %>
-</ol>
+<% @lists.each do |list| %>
+  <div class="list" id="<%= dom_id(list) %>">
+    <h3><%= list.name %></h3>
+    <div class="nav">
+      <%= link_to 'Edit', edit_list_path(listrail) %> | <%= link_to 'Destroy', list, method: :delete, data: { confirm: 'Are you sure?'} %>
+    </div>
+  </div>
+<% end %>
