--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,10 +1,11 @@
 <h2>Lists Index</h2>
 
+
+<ol>
 <% @lists.each do |list| %>
-  <div class="list" id="<%= dom_id(list) %>">
-    <h3><%= list.name %></h3>
+    <li><%= list.name %></li>
     <div class="nav">
-      <%= link_to 'Edit', edit_list_path(list) %> | <%= link_to 'Destroy', method: :delete, data: { confirm: 'Are you sure?'} %>
+      <%= link_to 'Edit', edit_list_path(list) %> | <%= link_to 'Destroy', list, method: :delete, data: { confirm: 'Are you sure?'} %>
     </div>
-  </div>
+  </ol>
 <% end %>
